# lib/db/src/schema/index.ts
@@ -18,3 +18,5 @@
 //   export type Post = typeof postsTable.$inferSelect;
 
 export * from "./users";
+export * from "./practiceSessions";
+export * from "./swingRecords";
